--- a/File_copy.ipynb
+++ b/File_copy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMGBeRE2DUw7kuS4bj8/aqR"
+      "authorship_tag": "ABX9TyMdQIdCKDtIfEzzEQKtXPL+"
     },
     "kernelspec": {
       "name": "python3",
@@ -512,6 +512,52 @@
       ],
       "metadata": {
         "id": "Zx2x5Bb4KPxI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "# Define the main directory where you want to rename files\n",
+        "main_directory = '/path/to/main/folder'\n",
+        "\n",
+        "# Function to rename files based on the main folder name and index in each subfolder\n",
+        "def rename_files_recursive(base_folder):\n",
+        "    for root, _, files in os.walk(base_folder):\n",
+        "        for file in files:\n",
+        "            # Get the subfolder name (relative to the main folder)\n",
+        "            subfolder_name = os.path.relpath(root, base_folder)\n",
+        "\n",
+        "            # Create an index for each subfolder if not already present\n",
+        "            if not hasattr(rename_files_recursive, 'subfolder_indexes'):\n",
+        "                rename_files_recursive.subfolder_indexes = {}\n",
+        "\n",
+        "            if subfolder_name not in rename_files_recursive.subfolder_indexes:\n",
+        "                rename_files_recursive.subfolder_indexes[subfolder_name] = 1\n",
+        "            else:\n",
+        "                rename_files_recursive.subfolder_indexes[subfolder_name] += 1\n",
+        "\n",
+        "            # Build the new filename\n",
+        "            index = rename_files_recursive.subfolder_indexes[subfolder_name]\n",
+        "            new_filename = f\"{subfolder_name}_{index}_{file}\"\n",
+        "\n",
+        "            # Build the full paths to the old and new files\n",
+        "            old_path = os.path.join(root, file)\n",
+        "            new_path = os.path.join(root, new_filename)\n",
+        "\n",
+        "            # Rename the file\n",
+        "            os.rename(old_path, new_path)\n",
+        "\n",
+        "# Rename files starting from the main directory\n",
+        "rename_files_recursive(main_directory)\n",
+        "\n",
+        "print(\"File renaming completed.\")\n"
+      ],
+      "metadata": {
+        "id": "glvfODbKMVau"
       },
       "execution_count": null,
       "outputs": []
