--- a/File_copy.ipynb
+++ b/File_copy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdQIdCKDtIfEzzEQKtXPL+"
+      "authorship_tag": "ABX9TyMvRX6UouN/p+zp+vJauoe1"
     },
     "kernelspec": {
       "name": "python3",
@@ -558,6 +558,32 @@
       ],
       "metadata": {
         "id": "glvfODbKMVau"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "# Function to print folder and subfolder names\n",
+        "def print_folder_names(base_folder, indent=\"\"):\n",
+        "    for item in os.listdir(base_folder):\n",
+        "        item_path = os.path.join(base_folder, item)\n",
+        "\n",
+        "        if os.path.isdir(item_path):\n",
+        "            print(f\"{indent}Folder: {item}\")\n",
+        "            print_folder_names(item_path, indent + \"  \")  # Recursively print subfolders\n",
+        "\n",
+        "# Define the main directory for which you want to print folder names\n",
+        "main_directory = '/path/to/main/folder'\n",
+        "\n",
+        "print(f\"Folder Structure in '{main_directory}':\")\n",
+        "print_folder_names(main_directory)\n"
+      ],
+      "metadata": {
+        "id": "T0e93DMON343"
       },
       "execution_count": null,
       "outputs": []
