--- a/File_copy.ipynb
+++ b/File_copy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMvRX6UouN/p+zp+vJauoe1"
+      "authorship_tag": "ABX9TyPiuDWPPJqMjaej8uOgarDX"
     },
     "kernelspec": {
       "name": "python3",
@@ -584,6 +584,45 @@
       ],
       "metadata": {
         "id": "T0e93DMON343"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "# Root directory containing subdirectories with files to rename\n",
+        "root_directory = '/path/to/root_directory'\n",
+        "\n",
+        "# Iterate through all subdirectories in the root directory\n",
+        "for folder_name in os.listdir(root_directory):\n",
+        "    folder_path = os.path.join(root_directory, folder_name)\n",
+        "\n",
+        "    # Check if the item in the root directory is a directory itself\n",
+        "    if os.path.isdir(folder_path):\n",
+        "        # List all files in the subdirectory\n",
+        "        files = os.listdir(folder_path)\n",
+        "\n",
+        "        # Initialize an index for renaming\n",
+        "        index = 1\n",
+        "\n",
+        "        # Iterate through the files in the subdirectory\n",
+        "        for file_name in files:\n",
+        "            # Construct the new file name using the directory name and index\n",
+        "            new_file_name = f'{folder_name}_{index}{os.path.splitext(file_name)[-1]}'\n",
+        "            index += 1\n",
+        "\n",
+        "            # Rename the file by moving it to a new name\n",
+        "            old_file_path = os.path.join(folder_path, file_name)\n",
+        "            new_file_path = os.path.join(folder_path, new_file_name)\n",
+        "\n",
+        "            os.rename(old_file_path, new_file_path)\n",
+        "            print(f'Renamed: {old_file_path} -> {new_file_path}')\n"
+      ],
+      "metadata": {
+        "id": "jJt_BtBdPIrN"
       },
       "execution_count": null,
       "outputs": []
