--- a/File_copy.ipynb
+++ b/File_copy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPiuDWPPJqMjaej8uOgarDX"
+      "authorship_tag": "ABX9TyMaiCTl9zwsHSN+2McWGg7F"
     },
     "kernelspec": {
       "name": "python3",
@@ -623,6 +623,44 @@
       ],
       "metadata": {
         "id": "jJt_BtBdPIrN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "# Function to rename files based on folder name and add an index\n",
+        "def rename_files(root_dir):\n",
+        "    for root, _, files in os.walk(root_dir):\n",
+        "        for index, file_name in enumerate(files, start=1):\n",
+        "            # Get the first 10 characters of the parent folder's name\n",
+        "            parent_folder = os.path.basename(root)[:10]\n",
+        "\n",
+        "            # Get the file's extension (if any)\n",
+        "            file_base, file_extension = os.path.splitext(file_name)\n",
+        "\n",
+        "            # Create a new file name with the parent folder's name and index\n",
+        "            new_file_name = f\"{parent_folder}_{index:03d}{file_extension}\"\n",
+        "\n",
+        "            # Construct the full paths to the old and new files\n",
+        "            old_file_path = os.path.join(root, file_name)\n",
+        "            new_file_path = os.path.join(root, new_file_name)\n",
+        "\n",
+        "            # Rename the file\n",
+        "            os.rename(old_file_path, new_file_path)\n",
+        "            print(f'Renamed: {old_file_path} -> {new_file_path}')\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    root_directory = \"your_root_directory_here\"\n",
+        "\n",
+        "    # Call the rename_files function with your root directory\n",
+        "    rename_files(root_directory)"
+      ],
+      "metadata": {
+        "id": "jT00kFUAQZNt"
       },
       "execution_count": null,
       "outputs": []
