--- a/File_copy.ipynb
+++ b/File_copy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMaiCTl9zwsHSN+2McWGg7F"
+      "authorship_tag": "ABX9TyNI7LHzPMxsHMW3uZiHH/ce"
     },
     "kernelspec": {
       "name": "python3",
@@ -661,6 +661,40 @@
       ],
       "metadata": {
         "id": "jT00kFUAQZNt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "def rename_files(root_dir):\n",
+        "    for root, _, files in os.walk(root_dir):\n",
+        "        for file_name in files:\n",
+        "            # Create a new file name by replacing / with _\n",
+        "            new_file_name = os.path.basename(root).replace('/', '_')\n",
+        "\n",
+        "            # Get the file's extension (if any)\n",
+        "            file_base, file_extension = os.path.splitext(file_name)\n",
+        "\n",
+        "            # Construct the full paths to the old and new files\n",
+        "            old_file_path = os.path.join(root, file_name)\n",
+        "            new_file_path = os.path.join(root, f\"{new_file_name}{file_extension}\")\n",
+        "\n",
+        "            # Rename the file\n",
+        "            os.rename(old_file_path, new_file_path)\n",
+        "            print(f'Renamed: {old_file_path} -> {new_file_path}')\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    root_directory = \"your_root_directory_here\"\n",
+        "\n",
+        "    # Call the rename_files function with your root directory\n",
+        "    rename_files(root_directory)\n"
+      ],
+      "metadata": {
+        "id": "92ceLvO8R29W"
       },
       "execution_count": null,
       "outputs": []
