--- a/File_copy.ipynb
+++ b/File_copy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNI7LHzPMxsHMW3uZiHH/ce"
+      "authorship_tag": "ABX9TyPrHCzJsLqcRjgfXxRwWs9x"
     },
     "kernelspec": {
       "name": "python3",
@@ -695,6 +695,46 @@
       ],
       "metadata": {
         "id": "92ceLvO8R29W"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "def rename_files(root_dir):\n",
+        "    for root, _, files in os.walk(root_dir):\n",
+        "        for file_name in files:\n",
+        "            # Get the full directory path (excluding the root directory)\n",
+        "            relative_path = os.path.relpath(root, root_dir)\n",
+        "\n",
+        "            # Remove any trailing slashes\n",
+        "            relative_path = relative_path.rstrip('/\\\\')\n",
+        "\n",
+        "            # Get the file's extension (if any)\n",
+        "            file_base, file_extension = os.path.splitext(file_name)\n",
+        "\n",
+        "            # Create a new file name using the full directory path\n",
+        "            new_file_name = os.path.normpath(os.path.join(relative_path, file_name))\n",
+        "\n",
+        "            # Construct the full paths to the old and new files\n",
+        "            old_file_path = os.path.join(root, file_name)\n",
+        "            new_file_path = os.path.join(root, new_file_name)\n",
+        "\n",
+        "            # Rename the file\n",
+        "            os.rename(old_file_path, new_file_path)\n",
+        "            print(f'Renamed: {old_file_path} -> {new_file_path}')\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    root_directory = \"your_root_directory_here\"\n",
+        "\n",
+        "    # Call the rename_files function with your root directory\n",
+        "    rename_files(root_directory)\n"
+      ],
+      "metadata": {
+        "id": "38UXV5sAS6nC"
       },
       "execution_count": null,
       "outputs": []
