--- a/cla_trai.ipynb
+++ b/cla_trai.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZclccbrskOTZ9aP58FtSi"
+      "authorship_tag": "ABX9TyMcZ9WY86OdRj3syLeiCxn/"
     },
     "kernelspec": {
       "name": "python3",
@@ -55,6 +55,281 @@
         "    svm_accuracy = svm_trainer.train(X_train, X_test, y_train, y_test)\n",
         "    print(\"SVM Accuracy:\", svm_accuracy)\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import tensorflow as tf\n",
+        "from object_detection.utils import config_util\n",
+        "from object_detection.protos import pipeline_pb2\n",
+        "from google.protobuf import text_format\n",
+        "from object_detection import model_lib_v2\n",
+        "\n",
+        "class ObjectDetectionTrainer:\n",
+        "    def __init__(self, pipeline_config_path):\n",
+        "        self.pipeline_config_path = pipeline_config_path\n",
+        "\n",
+        "    def train_model(self):\n",
+        "        pipeline_config = pipeline_pb2.TrainEvalPipelineConfig()\n",
+        "\n",
+        "        with tf.io.gfile.GFile(self.pipeline_config_path, \"r\") as f:\n",
+        "            proto_str = f.read()\n",
+        "            text_format.Merge(proto_str, pipeline_config)\n",
+        "\n",
+        "        model_config = config_util.create_configs_from_pipeline_proto(pipeline_config)\n",
+        "        model_config = config_util.create_configs_from_pipeline_proto(pipeline_config)\n",
+        "        train_config = model_config['train_config']\n",
+        "        model_config = model_config['model']\n",
+        "        detection_model = model_lib_v2.create_center_net_model(model_config, train_config)\n",
+        "\n",
+        "        train_input_config = model_config.train_config\n",
+        "\n",
+        "        def get_configs_from_pipeline_file(pipeline_config_path):\n",
+        "            configs = config_util.get_configs_from_pipeline_file(pipeline_config_path)\n",
+        "            model_config = configs['model']\n",
+        "            train_config = configs['train_config']\n",
+        "            return model_config, train_config\n",
+        "\n",
+        "        model_config, train_config = get_configs_from_pipeline_file(self.pipeline_config_path)\n",
+        "        train_input_config = train_config\n",
+        "\n",
+        "        model_lib_v2.train_loop(\n",
+        "            model=detection_model,\n",
+        "            configs=model_config,\n",
+        "            train_config=train_config,\n",
+        "            input_config=train_input_config\n",
+        "        )\n",
+        "\n",
+        "# Example usage\n",
+        "if __name__ == \"__main__\":\n",
+        "    pipeline_config_path = 'path/to/pipeline.config'  # Replace with your pipeline configuration file\n",
+        "\n",
+        "    trainer = ObjectDetectionTrainer(pipeline_config_path)\n",
+        "    trainer.train_model()\n"
+      ],
+      "metadata": {
+        "id": "G7Rn28bwZQKt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import random\n",
+        "import numpy as np\n",
+        "import cv2\n",
+        "from detectron2 import model_zoo\n",
+        "from detectron2.engine import DefaultTrainer\n",
+        "from detectron2.config import get_cfg\n",
+        "from detectron2.utils.visualizer import Visualizer\n",
+        "from detectron2.data import DatasetCatalog, MetadataCatalog\n",
+        "from detectron2.structures import BoxMode\n",
+        "\n",
+        "class InstanceSegmentationTrainer:\n",
+        "    def __init__(self, config_file, dataset_name, num_classes):\n",
+        "        self.config_file = config_file\n",
+        "        self.dataset_name = dataset_name\n",
+        "        self.num_classes = num_classes\n",
+        "\n",
+        "    def prepare_dataset(self, dataset_dict):\n",
+        "        dataset_dict[\"annotations\"] = [\n",
+        "            {\n",
+        "                \"bbox\": anno['bbox'],\n",
+        "                \"bbox_mode\": BoxMode.XYXY_ABS,\n",
+        "                \"category_id\": anno['category_id']\n",
+        "            } for anno in dataset_dict[\"annotations\"]\n",
+        "        ]\n",
+        "        return dataset_dict\n",
+        "\n",
+        "    def train(self, iterations=1000):\n",
+        "        cfg = get_cfg()\n",
+        "        cfg.merge_from_file(model_zoo.get_config_file(self.config_file))\n",
+        "        cfg.DATASETS.TRAIN = (self.dataset_name,)\n",
+        "        cfg.DATASETS.TEST = ()  # no testing. Validation could be added.\n",
+        "        cfg.DATALOADER.NUM_WORKERS = 2\n",
+        "        cfg.MODEL.WEIGHTS = model_zoo.get_checkpoint_url(self.config_file)\n",
+        "        cfg.SOLVER.IMS_PER_BATCH = 2\n",
+        "        cfg.SOLVER.BASE_LR = 0.00025\n",
+        "        cfg.SOLVER.MAX_ITER = iterations\n",
+        "        cfg.MODEL.ROI_HEADS.BATCH_SIZE_PER_IMAGE = 128\n",
+        "        cfg.MODEL.ROI_HEADS.NUM_CLASSES = self.num_classes\n",
+        "\n",
+        "        DatasetCatalog.register(self.dataset_name, lambda: self.prepare_dataset(your_dataset_function_here))\n",
+        "        MetadataCatalog.get(self.dataset_name).set(thing_classes=[\"your_class_list_here\"])\n",
+        "        metadata = MetadataCatalog.get(self.dataset_name)\n",
+        "\n",
+        "        os.makedirs(cfg.OUTPUT_DIR, exist_ok=True)\n",
+        "        trainer = DefaultTrainer(cfg)\n",
+        "        trainer.resume_or_load(resume=False)\n",
+        "        trainer.train()\n",
+        "\n",
+        "# Example usage\n",
+        "if __name__ == \"__main__\":\n",
+        "    # Set your configuration file, dataset name, and number of classes\n",
+        "    config_file = \"COCO-InstanceSegmentation/mask_rcnn_R_50_FPN_3x.yaml\"\n",
+        "    dataset_name = \"your_custom_dataset\"\n",
+        "    num_classes = 3  # Replace with your number of classes\n",
+        "\n",
+        "    # Initialize the InstanceSegmentationTrainer\n",
+        "    trainer = InstanceSegmentationTrainer(config_file, dataset_name, num_classes)\n",
+        "\n",
+        "    # Train the model\n",
+        "    trainer.train(iterations=1000)\n"
+      ],
+      "metadata": {
+        "id": "fUkZRbedZP9a"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "from torch.utils.data import DataLoader\n",
+        "from torchvision import transforms\n",
+        "from dataset import CustomDataset  # You need to create your own dataset class\n",
+        "from models import YOLOv5  # Assuming YOLOv5 is used\n",
+        "\n",
+        "class YOLOv8Trainer:\n",
+        "    def __init__(self, model, train_dataset, test_dataset, batch_size=8, num_epochs=10, learning_rate=0.001):\n",
+        "        self.device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "        self.model = model.to(self.device)\n",
+        "        self.train_dataset = train_dataset\n",
+        "        self.test_dataset = test_dataset\n",
+        "        self.batch_size = batch_size\n",
+        "        self.num_epochs = num_epochs\n",
+        "        self.learning_rate = learning_rate\n",
+        "\n",
+        "        self.train_loader = DataLoader(self.train_dataset, batch_size=self.batch_size, shuffle=True)\n",
+        "        self.test_loader = DataLoader(self.test_dataset, batch_size=self.batch_size, shuffle=False)\n",
+        "\n",
+        "        self.criterion = torch.nn.MSELoss()  # Define your own loss function\n",
+        "        self.optimizer = torch.optim.Adam(self.model.parameters(), lr=self.learning_rate)\n",
+        "\n",
+        "    def train(self):\n",
+        "        for epoch in range(self.num_epochs):\n",
+        "            self.model.train()\n",
+        "            running_loss = 0.0\n",
+        "            for i, data in enumerate(self.train_loader):\n",
+        "                inputs, targets = data\n",
+        "                inputs, targets = inputs.to(self.device), targets.to(self.device)\n",
+        "\n",
+        "                self.optimizer.zero_grad()\n",
+        "                outputs = self.model(inputs)\n",
+        "                loss = self.criterion(outputs, targets)\n",
+        "                loss.backward()\n",
+        "                self.optimizer.step()\n",
+        "\n",
+        "                running_loss += loss.item()\n",
+        "\n",
+        "            print(f\"Epoch [{epoch+1}/{self.num_epochs}], Loss: {running_loss / len(self.train_loader)}\")\n",
+        "\n",
+        "    def evaluate(self):\n",
+        "        self.model.eval()\n",
+        "        with torch.no_grad():\n",
+        "            total = 0\n",
+        "            correct = 0\n",
+        "            for data in self.test_loader:\n",
+        "                inputs, targets = data\n",
+        "                inputs, targets = inputs.to(self.device), targets.to(self.device)\n",
+        "\n",
+        "                outputs = self.model(inputs)\n",
+        "                # Implement evaluation logic based on instance segmentation task\n",
+        "\n",
+        "                # Example evaluation - Compute accuracy\n",
+        "                total += targets.size(0)\n",
+        "                # Implement your own evaluation metrics/logic for instance segmentation\n",
+        "\n",
+        "            print(f\"Accuracy: {100 * correct / total}%\")\n",
+        "\n",
+        "# Example usage\n",
+        "if __name__ == \"__main__\":\n",
+        "    # Assuming you have your own CustomDataset for training and testing\n",
+        "    train_dataset = CustomDataset(train=True)\n",
+        "    test_dataset = CustomDataset(train=False)\n",
+        "\n",
+        "    model = YOLOv5()  # Example YOLOv5 model instance\n",
+        "\n",
+        "    trainer = YOLOv8Trainer(model, train_dataset, test_dataset)\n",
+        "    trainer.train()\n",
+        "    trainer.evaluate()\n"
+      ],
+      "metadata": {
+        "id": "veXbBLELaR3e"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Make sure to install necessary libraries: torch, torchvision, numpy, etc.\n",
+        "import torch\n",
+        "from torchvision import datasets, models, transforms\n",
+        "from torch.utils.data import DataLoader\n",
+        "\n",
+        "class YOLOv8Trainer:\n",
+        "    def __init__(self, model, train_data, test_data, device='cuda' if torch.cuda.is_available() else 'cpu'):\n",
+        "        self.model = model.to(device)\n",
+        "        self.device = device\n",
+        "        self.train_data = train_data\n",
+        "        self.test_data = test_data\n",
+        "\n",
+        "    def train(self, num_epochs=10, batch_size=16, learning_rate=0.001):\n",
+        "        criterion = ...  # Define your loss function\n",
+        "        optimizer = torch.optim.SGD(self.model.parameters(), lr=learning_rate)\n",
+        "\n",
+        "        train_loader = DataLoader(self.train_data, batch_size=batch_size, shuffle=True)\n",
+        "        test_loader = DataLoader(self.test_data, batch_size=batch_size, shuffle=False)\n",
+        "\n",
+        "        for epoch in range(num_epochs):\n",
+        "            # Training loop\n",
+        "            self.model.train()\n",
+        "            for images, targets in train_loader:\n",
+        "                images, targets = images.to(self.device), targets.to(self.device)\n",
+        "\n",
+        "                # Forward pass\n",
+        "                outputs = self.model(images)\n",
+        "                loss = criterion(outputs, targets)\n",
+        "\n",
+        "                # Backward pass and optimization\n",
+        "                optimizer.zero_grad()\n",
+        "                loss.backward()\n",
+        "                optimizer.step()\n",
+        "\n",
+        "            # Validation loop\n",
+        "            self.model.eval()\n",
+        "            with torch.no_grad():\n",
+        "                total = 0\n",
+        "                correct = 0\n",
+        "                for images, targets in test_loader:\n",
+        "                    images, targets = images.to(self.device), targets.to(self.device)\n",
+        "                    outputs = self.model(images)\n",
+        "                    # Calculate validation accuracy or other metrics\n",
+        "\n",
+        "            print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {loss.item()}, Validation Accuracy: {correct/total * 100}%')\n",
+        "\n",
+        "        print('Training finished.')\n",
+        "\n",
+        "# Example usage\n",
+        "if __name__ == \"__main__\":\n",
+        "    # Define and load your YOLOv8 model, train and test datasets here\n",
+        "    yolo_model = ...  # Instantiate your YOLOv8 model using PyTorch\n",
+        "    train_dataset = ...  # Your training dataset (use PyTorch's dataset class)\n",
+        "    test_dataset = ...   # Your test dataset\n",
+        "\n",
+        "    yolo_trainer = YOLOv8Trainer(yolo_model, train_dataset, test_dataset)\n",
+        "    yolo_trainer.train(num_epochs=10, batch_size=16, learning_rate=0.001)\n"
+      ],
+      "metadata": {
+        "id": "HtRCmcLsaUKH"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
