--- a/cla_trai.ipynb
+++ b/cla_trai.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcZ9WY86OdRj3syLeiCxn/"
+      "authorship_tag": "ABX9TyMPlhJQB7eCdpvlzL9J8s6I"
     },
     "kernelspec": {
       "name": "python3",
@@ -327,6 +327,69 @@
       ],
       "metadata": {
         "id": "HtRCmcLsaUKH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "from torchvision import transforms\n",
+        "from PIL import Image\n",
+        "import numpy as np\n",
+        "from pathlib import Path\n",
+        "from yolov8.models.experimental import attempt_load\n",
+        "from yolov8.utils.general import non_max_suppression, scale_coords\n",
+        "from yolov8.utils.torch_utils import select_device\n",
+        "\n",
+        "class YOLOv8Inference:\n",
+        "    def __init__(self, model_path, device='cuda' if torch.cuda.is_available() else 'cpu'):\n",
+        "        self.device = select_device(device)\n",
+        "        self.model = attempt_load(model_path, map_location=self.device)\n",
+        "\n",
+        "    def predict(self, image_path):\n",
+        "        img0 = Image.open(image_path).convert('RGB')\n",
+        "        img = transforms.ToTensor()(img0).unsqueeze(0).to(self.device)\n",
+        "\n",
+        "        # Get predictions\n",
+        "        pred = self.model(img)[0]\n",
+        "\n",
+        "        # Apply NMS\n",
+        "        pred = non_max_suppression(pred, conf_thres=0.5, iou_thres=0.5)\n",
+        "\n",
+        "        # Extract masks\n",
+        "        masks = []\n",
+        "        for det in pred:\n",
+        "            if det is not None and len(det):\n",
+        "                det[:, :4] = scale_coords(img.shape[2:], det[:, :4], img0.size).round()\n",
+        "                for *xyxy, conf, cls in reversed(det):\n",
+        "                    masks.append(self.extract_mask(img0, xyxy))\n",
+        "\n",
+        "        return masks\n",
+        "\n",
+        "    @staticmethod\n",
+        "    def extract_mask(img, xyxy):\n",
+        "        xyxy = [int(i) for i in xyxy]\n",
+        "        left, top, right, bottom = xyxy\n",
+        "        mask = np.zeros_like(np.array(img))\n",
+        "        mask[top:bottom, left:right] = img.crop(xyxy)\n",
+        "        return mask\n",
+        "\n",
+        "# Example usage\n",
+        "if __name__ == \"__main__\":\n",
+        "    model_path = \"path/to/your/yolov8/model.pt\"\n",
+        "    image_path = \"path/to/your/test/image.jpg\"\n",
+        "\n",
+        "    yolo_inference = YOLOv8Inference(model_path)\n",
+        "    masks = yolo_inference.predict(image_path)\n",
+        "\n",
+        "    # Visualize or save the masks as needed\n",
+        "    for i, mask in enumerate(masks):\n",
+        "        Image.fromarray(mask).show()\n"
+      ],
+      "metadata": {
+        "id": "vMX3UU5TaVE0"
       },
       "execution_count": null,
       "outputs": []
