--- a/cla_trai.ipynb
+++ b/cla_trai.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMPlhJQB7eCdpvlzL9J8s6I"
+      "authorship_tag": "ABX9TyOarMQjcmPwJJkR8Rvkyw68"
     },
     "kernelspec": {
       "name": "python3",
@@ -390,6 +390,109 @@
       ],
       "metadata": {
         "id": "vMX3UU5TaVE0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "from torchvision import transforms\n",
+        "from PIL import Image\n",
+        "from yolov8.models.experimental import attempt_load\n",
+        "from yolov8.utils.general import non_max_suppression, scale_coords\n",
+        "from yolov8.utils.torch_utils import select_device\n",
+        "\n",
+        "class YOLOv8SegmentationInference:\n",
+        "    def __init__(self, model_path, device='cuda' if torch.cuda.is_available() else 'cpu'):\n",
+        "        self.device = select_device(device)\n",
+        "        self.model = attempt_load(model_path, map_location=self.device)\n",
+        "\n",
+        "    def predict(self, image_path):\n",
+        "        img0 = Image.open(image_path).convert('RGB')\n",
+        "        img = transforms.ToTensor()(img0).unsqueeze(0).to(self.device)\n",
+        "\n",
+        "        # Get predictions\n",
+        "        pred = self.model(img)[0]\n",
+        "\n",
+        "        # Apply NMS\n",
+        "        pred = non_max_suppression(pred, conf_thres=0.5, iou_thres=0.5)\n",
+        "\n",
+        "        # Extract predicted classes\n",
+        "        predicted_classes = []\n",
+        "        for det in pred:\n",
+        "            if det is not None and len(det):\n",
+        "                det[:, :4] = scale_coords(img.shape[2:], det[:, :4], img0.size).round()\n",
+        "                for *xyxy, conf, cls in reversed(det):\n",
+        "                    predicted_classes.append(int(cls))\n",
+        "\n",
+        "        return predicted_classes\n",
+        "\n",
+        "# Example usage\n",
+        "if __name__ == \"__main__\":\n",
+        "    model_path = \"path/to/your/yolov8/model.pt\"\n",
+        "    image_path = \"path/to/your/test/image.jpg\"\n",
+        "\n",
+        "    yolo_segmentation_inference = YOLOv8SegmentationInference(model_path)\n",
+        "    predicted_classes = yolo_segmentation_inference.predict(image_path)\n",
+        "\n",
+        "    print(\"Predicted Classes:\", predicted_classes)\n"
+      ],
+      "metadata": {
+        "id": "JcR1EFbMa6Xv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "from torchvision import transforms\n",
+        "from PIL import Image\n",
+        "from yolov8.models.experimental import attempt_load\n",
+        "from yolov8.utils.general import non_max_suppression, scale_coords\n",
+        "from yolov8.utils.torch_utils import select_device\n",
+        "\n",
+        "class YOLOv8SegmentationInference:\n",
+        "    def __init__(self, model_path, device='cuda' if torch.cuda.is_available() else 'cpu'):\n",
+        "        self.device = select_device(device)\n",
+        "        self.model = attempt_load(model_path, map_location=self.device)\n",
+        "\n",
+        "    def predict(self, image_path):\n",
+        "        img0 = Image.open(image_path).convert('RGB')\n",
+        "        img = transforms.ToTensor()(img0).unsqueeze(0).to(self.device)\n",
+        "\n",
+        "        # Get predictions\n",
+        "        pred = self.model(img)[0]\n",
+        "\n",
+        "        # Apply NMS\n",
+        "        pred = non_max_suppression(pred, conf_thres=0.5, iou_thres=0.5)\n",
+        "\n",
+        "        # Extract predicted classes and scores\n",
+        "        predictions = []\n",
+        "        for det in pred:\n",
+        "            if det is not None and len(det):\n",
+        "                det[:, :4] = scale_coords(img.shape[2:], det[:, :4], img0.size).round()\n",
+        "                for *xyxy, conf, cls in reversed(det):\n",
+        "                    predictions.append({'class': int(cls), 'score': float(conf)})\n",
+        "\n",
+        "        return predictions\n",
+        "\n",
+        "# Example usage\n",
+        "if __name__ == \"__main__\":\n",
+        "    model_path = \"path/to/your/yolov8/model.pt\"\n",
+        "    image_path = \"path/to/your/test/image.jpg\"\n",
+        "\n",
+        "    yolo_segmentation_inference = YOLOv8SegmentationInference(model_path)\n",
+        "    predictions = yolo_segmentation_inference.predict(image_path)\n",
+        "\n",
+        "    for pred in predictions:\n",
+        "        print(f\"Class: {pred['class']}, Score: {pred['score']:.4f}\")\n"
+      ],
+      "metadata": {
+        "id": "nfTexCSMbvbB"
       },
       "execution_count": null,
       "outputs": []
